Prevent page overflow scrolling on large screens

--- a/src/main.css
+++ b/src/main.css
@@ -39,8 +39,11 @@ body {
 }
 
 @media screen and (min-width: 800px) {
-    body {
+    html {
         overflow: hidden;
+        position: fixed;
+        width: 100%;
+        height: 100%;
     }
     
     #app {
